propose a different structure for reviewer answer

--- a/reviews/PsychBulletinEditor.Rmd
+++ b/reviews/PsychBulletinEditor.Rmd
@@ -23,22 +23,14 @@ You offer a new perspective on an important issue, and I truly enjoyed reading t
 
 That said, this is more of a think piece than a theoretical review, and the value of assessing theoretical risk remains hypothetical.
 I think you would agree that your examples are highly schematic and serve to illustrate the principles that you are proposing as opposed to reporting specific examples of how these principles can improve psychological research.
-
-> We fully agree.
-
 Perhaps it would be possible to compare a range of studies with and without preregistrations to show how the act of preregistration helps clarify the reported results even when the preregistration does not report the level of detail required for a truly confirmatory study.
-
-> We are sure this is possible and would be enlightening but we would not be sure how to relate the results to the paper.
-> The issue is, that how close a theory is to truth, is very difficult to measure.
-> That implies that measuring if our approach is successfull is similarly difficult to measure empierically.
-> Our goal is more modest: Showing that if you subscribe to a certain class of philosphies of science, you should find preregistered evidence more persuasive.
-
 Given your broad scope, the reviewed studies would ideally come from a variety of research domains.
 In other words, perhaps it is possible to put your ideas through a few test runs to see how they can be applied when all the messy details of specific research endeavors are considered.
 
-> Applying preregistration with "all the messy details of specific research endeavors" arguably already leads to quite some confusion.
-> We hope that some conceptual clarity helps researcher in practice.
-> This hope is grounded in Kurt Lewins Maxim: "Nothing as practical as a good theory".
+> We are sure this would be possible and enlightening, but also way beyond the scope of the current paper.
+> Out goal is more modest: we want to provide a bayesian justification of pre-registration that 1. clearly articulates the aims of a preregistration and 2. describes how preregistration achieves these goals.
+> As a result, it eliminates common missconceptions about preregistrations, for example, that you are not allowed to deviate under any circumstances.
+> To achieve these goals, our examples are purposely schematic, as we want them to apply to all empirical sciences.
 
 In my view, theoretical reviews propose a new set of ideas *and* systematically apply the new ideas to existing findings to establish new discoveries or bolster conclusions with more rigorous methods.
 I don’t see the second element here, and I don’t see how getting reviewer comments would change that impression.
