--- a/references.bib
+++ b/references.bib
@@ -862,3 +862,18 @@
   doi = {10.1037/a0030001},
   langid = {english}
 }
+
+@article{lakensDeviate2024,
+    author = {Lakens, Daniël},
+    title = "{When and How to Deviate From a Preregistration}",
+    journal = {Collabra: Psychology},
+    volume = {10},
+    number = {1},
+    pages = {117094},
+    year = {2024},
+    month = {05},
+    issn = {2474-7394},
+    doi = {10.1525/collabra.117094},
+    url = {https://doi.org/10.1525/collabra.117094},
+}
+
