--- a/reviews.Rmd
+++ b/reviews.Rmd
@@ -78,7 +78,7 @@ So I applaud the authors for believing this is important.
 At the same time, their arguments were, I believe, not always equally convincing, and they do not adequately discuss the existing literature.
 :::
 
-We thank the reviewer for pointing out that we failed to include opposing philosophical perspectives.
+We thank the reviewer for pointing out that we failed to better acknowledge opposing philosophical perspectives.
 We are now citing Laken's and Mayo's positions and relate them to our perspective.
 
 :::reviewer
